fix(websocket): fix all problem about websocket from chat to notification